[fixup]: write documentation

--- a/docs/theme/extra/templates/navbar_links.html
+++ b/docs/theme/extra/templates/navbar_links.html
@@ -8,6 +8,7 @@
 		@for tup in (("Gnome-module.html","GNOME"), \
 			     ("i18n-module.html","i18n"), \
 			     ("Pkgconfig-module.html","Pkgconfig"), \
+			     ("Python-module.html","Python"), \
 			     ("Python-3-module.html","Python 3"), \
 			     ("Qt4-module.html","Qt4"), \
 			     ("Qt5-module.html","Qt5"), \
