hotdoc: Add documentation

--- a/docs/theme/extra/templates/navbar_links.html
+++ b/docs/theme/extra/templates/navbar_links.html
@@ -13,7 +13,8 @@
 			     ("Qt4-module.html","Qt4"), \
 			     ("Qt5-module.html","Qt5"), \
 			     ("RPM-module.html","RPM"), \
-			     ("Windows-module.html","Windows")):
+			     ("Windows-module.html","Windows"), \
+			     ("Hotdoc-module.html","Hotdoc")):
 			<li>
 				<a href="@tup[0]">@tup[1]</a>
 			</li>
