modules/xorg: Add unstable_xorg module
This provides helpers used by many Xorg projects.

Currently only provides a helper for generating man pages.

--- a/docs/theme/extra/templates/navbar_links.html
+++ b/docs/theme/extra/templates/navbar_links.html
@@ -27,7 +27,7 @@
             ("Simd-module.html","Simd"), \
             ("SourceSet-module.html","SourceSet"), \
             ("Wayland-module.html","Wayland"), \
-            ("Windows-module.html","Windows")]:
+            ("Xorg-module.html", "Xorg")]:
         <li>
             <a href="@tup[0]">@tup[1]</a>
         </li>
