docs: Use a custom hotdoc extension for links to RefMan

--- a/docs/refman/templates/dummy.mustache
+++ b/docs/refman/templates/dummy.mustache
@@ -4,5 +4,5 @@ render-subpages: true
 ...
 # {{name}}
 
-See the [root manual document]([[!root]]) for
+See the [root manual document]({{root}}) for
 a general overview.
