docs: Temporarily disable modules and move RefMan --> Reference-manual

--- a/docs/refman/templates/root.mustache
+++ b/docs/refman/templates/root.mustache
@@ -41,11 +41,12 @@ or other methods.
 {{indent}}- {{&link}}
 {{/returned}}
 
+{{#enable_modules}}
 ## Modules
 
 {{#modules}}
 {{indent}}- {{&link}}
 {{/modules}}
-
+{{/enable_modules}}
 
 <!-- The links used to be generated wit {>root_link}, but this is a bit hard to read  -->
